--- a/index.html
+++ b/index.html
@@ -15,44 +15,36 @@
 
 <body>
   <div class="page">
-    <div class="page__sidebar">
-      <nav class="navigation">
-        <ul class="navigation__list">
-          <li class="navigation__item" tabindex="1">
-            <a href="#" class="fa-solid fa-user"></a>
-          </li>
-          <li class="navigation__item navigation__item--active" tabindex="2">
-            <a href="#"class="fa-solid fa-comment"></a>
-          </li>
-          <li class="navigation__item">
-            <a href="#"class="fa-solid fa-circle-info" tabindex="3"></a>
-          </li>
-          <li class="navigation__item navigation__item--separator" tabindex="4">
-            <a href="#"class="fa-solid fa-house-medical"></a>
-          </li>
-          <li class="navigation__item" tabindex="5">
-            <a href="#"class="fa-solid fa-gear"></a>
-          </li>
-        </ul>
+    <nav class="navigation">
+      <ul class="navigation__list">
+        <li class="navigation__item" tabindex="1">
+          <a href="#" class="fa-solid fa-user"></a>
+        </li>
+        <li class="navigation__item navigation__item--active" tabindex="2">
+          <a href="#"class="fa-solid fa-comment"></a>
+        </li>
+        <li class="navigation__item">
+          <a href="#"class="fa-solid fa-circle-info" tabindex="3"></a>
+        </li>
+        <li class="navigation__item navigation__item--separator" tabindex="4">
+          <a href="#"class="fa-solid fa-house-medical"></a>
+        </li>
+        <li class="navigation__item" tabindex="5">
+          <a href="#"class="fa-solid fa-gear"></a>
+        </li>
+      </ul>
 
-        <div class="powered-by">
-          <p class="powered-by__text">
-            powered by
-          </p>
-          <p class="powered-by__name">
-            DR. CLIP
-          </p>
-        </div>
-      </nav>
-    </div>
+      <img class="powered-by" src="./images/dr_clip.png" alt="">
+
+    </nav>
     <div class="patient">
       <div class="patient__logo-container">
         <img class="patient__logo" src="./images/logo.png" alt="Logo">
       </div>
       <div class="patient__content">
-        <h2 class="patient__headline">
+        <h1 class="patient__headline">
           Patientenberatung
-        </h2>
+        </h1>
         <div>
           <div class="patient__item--separator">
             <ul class="patient__record">
@@ -89,6 +81,7 @@
           </button>
       </div>
     </div>
+
     <main class="main">
       <header class="main__header">
         <div class="modus">
@@ -161,7 +154,7 @@
 
         </section>
 
-        <section class="selection">
+        <section class="findings-selection">
           <h1 class="selection__headline">Auswahl des Befundes</h1>
           <input type="search" class="search-findings" placeholder="Befund suchen">
           <div class="selection__buttons">
@@ -184,8 +177,104 @@
               <button class="findings-tag">Offener Biss</button>
             </div>
           </div>
+        </section>
 
+        <section class="treatment-selection">
 
+          <div class="treatment">
+            <div class="treatment__image-box">
+              <img class="teeth-img" src="./images/teeth.jpeg" alt="Bild">
+              <div class="middle-icon"></div>
+              <i class="fa-solid fa-arrow-rotate-right"></i>
+              <i class="fa-solid fa-check"></i>
+              <i class="fa-solid fa-star"></i>
+            </div>
+            <h4 class="treatment__description">
+              Expansion des Kiefers durch die Gaumennaht-erweiterung
+            </h4>
+            <p class="treatment__detail">
+              Oberkiefer links, 3. Zahn hinten
+            </p>
+            <button class="treatment__button">Auswählen</button>
+          </div>
+
+          <div class="treatment">
+            <div class="treatment__image-box">
+              <img class="teeth-img" src="./images/teeth.jpeg" alt="Bild">
+              <div class="middle-icon"></div>
+              <i class="fa-solid fa-play"></i>
+              <i class="fa-solid fa-star"></i>
+            </div>
+            <h4 class="treatment__description">
+              Expansion des Kiefers durch die Gaumennaht-erweiterung
+            </h4>
+            <p class="treatment__detail">
+              Oberkiefer links, 3. Zahn hinten
+            </p>
+            <button class="treatment__button">Auswählen</button>
+          </div>
+
+          <div class="treatment">
+            <div class="treatment__image-box">
+              <img class="teeth-img" src="./images/teeth.jpeg" alt="Bild">
+              <div class="middle-icon"></div>
+              <i class="fa-solid fa-play"></i>
+            </div>
+            <h4 class="treatment__description">
+              Expansion des Kiefers durch die Gaumennaht-erweiterung
+            </h4>
+            <p class="treatment__detail">
+              Oberkiefer links, 3. Zahn hinten
+            </p>
+            <button class="treatment__button">Auswählen</button>
+          </div>
+
+          <div class="treatment">
+            <div class="treatment__image-box">
+              <img class="teeth-img" src="./images/teeth.jpeg" alt="Bild">
+              <div class="middle-icon"></div>
+              <i class="fa-solid fa-arrow-rotate-right"></i>
+              <i class="fa-solid fa-check"></i>
+            </div>
+            <h4 class="treatment__description">
+              Expansion des Kiefers durch die Gaumennaht-erweiterung
+            </h4>
+            <p class="treatment__detail">
+              Oberkiefer links, 3. Zahn hinten
+            </p>
+            <button class="treatment__button">Auswählen</button>
+          </div>
+
+          <div class="treatment">
+            <div class="treatment__image-box">
+              <img class="teeth-img" src="./images/teeth.jpeg" alt="Bild">
+              <div class="middle-icon"></div>
+              <i class="fa-solid fa-play"></i>
+            </div>
+            <h4 class="treatment__description">
+              Expansion des Kiefers durch die Gaumennaht-erweiterung
+            </h4>
+            <p class="treatment__detail">
+              Oberkiefer links, 3. Zahn hinten
+            </p>
+            <button class="treatment__button">Auswählen</button>
+          </div>
+
+          <div class="treatment">
+            <div class="treatment__image-box">
+              <img class="teeth-img" src="./images/teeth.jpeg" alt="Bild">
+              <div class="middle-icon"></div>
+              <i class="fa-solid fa-arrow-rotate-right"></i>
+              <i class="fa-solid fa-check"></i>
+            </div>
+            <h4 class="treatment__description">
+              Expansion des Kiefers durch die Gaumennaht-erweiterung
+            </h4>
+            <p class="treatment__detail">
+              Oberkiefer links, 3. Zahn hinten
+            </p>
+            <button class="treatment__button">Auswählen</button>
+          </div>
 
         </section>
 
@@ -193,7 +282,15 @@
 
 
 
+
+
       </div>
+      <footer class="footer">
+        <a href="#">Kontakt</a>
+        <a href="#">Impressum</a>
+        <a href="#">Datenschutz</a>
+        <a href="#">FAQ</a>
+      </footer>
 
     </main>
 
@@ -201,6 +298,6 @@
 
 
 
-    </div>
+  </div>
   <script src="https://kit.fontawesome.com/aab8c67944.js" crossorigin="anonymous"></script>
 </body>
